# PhD

./: .gitignore  PhD_Brief.txt  README.md  main.py  pyproject.toml
ExpRegistry/: README.md  pyproject.toml
ExpRegistry/src/expregistry/: __init__.py  cli.py
ExpRegistry/src/expregistry/config/: base_config.yaml
ExpRegistry/src/expregistry/registry/: dataset_registry.py
ExpRegistry/src/expregistry/registry/templates/dataset_template/: dataset.py
backend/: pyproject.toml
